nifi/4-nifi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
  namespace: nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      serviceAccountName: nifi-sa
      containers:
        - name: nifi
          image: apache/nifi:latest
          ports:
            - containerPort: 8080
