nifi/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routes
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 8080
